# wintrae-1317

./: .article-checker.json  README.md  pyproject.toml
src/article_checker/: checker.py  cli.py  compressor.py  config.py  link_checker.py  renamer.py  reporter.py  types.py
test_data/articles/: post1.md  post3.html
test_output/: report.html  report.json  report.txt
test_output/renamed_articles/: 20240115_tech_01.md  20240116_life_02.md  20260618_article_03.html  demo-post2.md  demo-python-入门教程.md  demo-web-开发指南.html
